--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,16 @@ axum = "0.8.1"
 serde = { version = "1.0.217", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 
+[dependencies.sea-orm]
+version = "1.1.4"
+default-features = false
+features = [
+    "sqlx-postgres",
+    "runtime-tokio-rustls",
+    "macros",
+    "with-chrono",
+    "with-uuid",
+]
+
 [dev-dependencies]
 reqwest = "0.12.12"
