--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,13 @@ path = "src/lib.rs"
 path = "src/main.rs"
 name = "zero2prod"
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 axum = "0.8.1"
 config = "0.15.6"
+sea-orm-codegen = "1.1.4"
 serde = { version = "1.0.217", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 
