--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -3,4 +3,10 @@ name = "entity"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "entity"
+path = "src/lib.rs"
+
 [dependencies]
+sea-orm = "1.1.4"
+serde = { version = "1.0.217", features = ["derive"] }
