--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,13 @@ name = "zero2prod"
 members = [".", "entity", "migration"]
 
 [dependencies]
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["macros"] }
+chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 config = "0.15.6"
 sea-orm-codegen = "1.1.4"
 serde = { version = "1.0.217", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.12.0", features = ["v4"] }
 
 [dependencies.sea-orm]
 version = "1.1.4"
