--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "zero2prod"
 version = "0.1.0"
@@ -17,15 +19,16 @@ members = [".", "entity", "migration"]
 axum = { version = "0.8.1", features = ["macros"] }
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 config = "0.15.6"
-env_logger = "0.11.6"
 log = "0.4.25"
-sea-orm-codegen = "1.1.4"
 serde = { version = "1.0.217", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
-tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = [
+    "registry",
+    "env-filter",
+] }
 uuid = { version = "1.12.0", features = ["v4"] }
 
 [dependencies.sea-orm]
