--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [".", "entity", "migration"]
 
 [dependencies]
 axum = { version = "0.8.1", features = ["macros"] }
+axum-tracing-opentelemetry = "0.25.0"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 config = "0.15.6"
 log = "0.4.25"
@@ -23,7 +24,6 @@ serde = { version = "1.0.217", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["trace"] }
-tower-request-id = "0.3.0"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
