--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing-subscriber = { version = "0.3.19", features = [
     "registry",
     "env-filter",
 ] }
+unicode-segmentation = "1.12.0"
 uuid = { version = "1.12.0", features = ["v4"] }
 
 [dependencies.sea-orm]
