--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tracing-subscriber = { version = "0.3.19", features = [
 ] }
 unicode-segmentation = "1.12.0"
 uuid = { version = "1.12.0", features = ["v4"] }
+validator = "0.20.0"
 
 [dependencies.sea-orm]
 version = "1.1.4"
