--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,13 @@ path = "entity"
 [dependencies.migration]
 path = "migration"
 
+[dependencies.reqwest]
+version = "0.12.12"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
 fake = "3.1.0"
-reqwest = "0.12.12"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rand = "0.8.5"
