--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -3,3 +3,6 @@ application:
 database:
   host: "postgres"
   require_ssl: true
+email_client:
+  base_url: "https://api.postmarkapp.com"
+  sender_email: "something@gmail.com"
