--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -2,6 +2,7 @@
 application:
   port: 8000
   host: 127.0.0.1
+  base_url: "http://127.0.0.1"
 database:
   host: "localhost"
   port: 5432
@@ -11,5 +12,5 @@ database:
 email_client:
   base_url: "localhost"
   sender_email: "test@gmail.com"
-  authorization_token: "my-secret-token"
+  authorization_token: "secret-token"
   timeout_milliseconds: 10000
