--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -11,6 +11,6 @@ database:
   database_name: "newsletter"
 email_client:
   base_url: "localhost"
-  sender_email: "test@gmail.com"
+  sender_email: "cloud@ohmycloudy.uk"
   authorization_token: "secret-token"
   timeout_milliseconds: 10000
