--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -5,4 +5,4 @@ database:
   require_ssl: true
 email_client:
   base_url: "https://api.postmarkapp.com"
-  sender_email: "something@gmail.com"
+  sender_email: "cloud@ohmycloudy.uk"
