--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 members = [".", "entity", "migration"]
 
 [dependencies]
+anyhow = "1.0.96"
 axum = { version = "0.8.1", features = ["macros"] }
 axum-tracing-opentelemetry = "0.25.0"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
