--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [".", "entity", "migration"]
 anyhow = "1.0.96"
 axum = { version = "0.8.1", features = ["macros"] }
 axum-tracing-opentelemetry = "0.25.0"
+base64 = "0.22.1"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 claims = "0.8.0"
 config = "0.15.6"
