--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [".", "entity", "migration"]
 
 [dependencies]
 anyhow = "1.0.96"
+argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.8.1", features = ["macros"] }
 axum-tracing-opentelemetry = "0.25.0"
 base64 = "0.22.1"
