--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,12 @@ tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.19", features = [
     "registry",
     "env-filter",
+    "chrono",
+    "local-time",
+    "fmt",
 ] }
 unicode-segmentation = "1.12.0"
+urlencoding = "2.1.3"
 uuid = { version = "1.12.0", features = ["v4"] }
 validator = "0.20.0"
 
