--- a/spec.yaml
+++ b/spec.yaml
@@ -54,6 +54,9 @@ services:
       - key: APP_APPLICATION__BASE_URL
         scope: RUN_TIME
         value: ${APP_URL}
+      - key: APP_APPLICATION__HMAC_SECRET
+        scope: RUN_TIME
+        value: ${APP_SECRET}
 
 databases:
   - engine: PG
