--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,14 @@ chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 claims = "0.8.0"
 config = "0.15.6"
 handlebars = "6.3.1"
+hmac = { version = "0.12.1", features = ["std"] }
 htmlescape = "0.3.1"
 log = "0.4.25"
 rand = { version = "0.8.5", features = ["std_rng"] }
 secrecy = { version = "0.10.3", features = ["serde"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde-aux = "4.5.0"
+sha2 = "0.10.8"
 thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.5.2" }
