--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -3,6 +3,7 @@ application:
   port: 8000
   host: 127.0.0.1
   base_url: "http://127.0.0.1"
+  hmac_secret: "long-and-very-secret-random-key-needed-to-verify-message-integrity"
 database:
   host: "localhost"
   port: 5432
