--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ path = "migration"
 [dependencies.reqwest]
 version = "0.12.12"
 default-features = false
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 fake = "3.1.0"
