--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [".", "entity", "migration"]
 anyhow = "1.0.96"
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.8.1", features = ["macros"] }
+axum-extra = { version = "0.10.0", features = ["cookie"] }
 axum-tracing-opentelemetry = "0.25.0"
 base64 = "0.22.1"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
