--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0.96"
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { version = "0.8.1", features = ["macros"] }
 axum-extra = { version = "0.10.0", features = ["cookie"] }
+axum-messages = "0.8.0"
 axum-tracing-opentelemetry = "0.25.0"
 base64 = "0.22.1"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
