--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ hmac = { version = "0.12.1", features = ["std"] }
 htmlescape = "0.3.1"
 log = "0.4.25"
 rand = { version = "0.8.5", features = ["std_rng"] }
+sea-orm-migration = "1.1.10"
 secrecy = { version = "0.10.3", features = ["serde"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde-aux = "4.5.0"
@@ -54,7 +55,7 @@ uuid = { version = "1.12.0", features = ["v4"] }
 validator = "0.20.0"
 
 [dependencies.sea-orm]
-version = "1.1.4"
+version = "1.1.10"
 default-features = false
 features = [
     "sqlx-postgres",
