--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["trace"] }
+tower-sessions = "0.14.0"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
