--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,12 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde-aux = "4.5.0"
 sha2 = "0.10.8"
 thiserror = "2.0.11"
+time = "0.3.41"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["trace"] }
 tower-sessions = "0.14.0"
+tower-sessions-redis-store = "0.16.0"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
