--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -15,3 +15,4 @@ email_client:
   sender_email: "cloud@ohmycloudy.uk"
   authorization_token: "secret-token"
   timeout_milliseconds: 10000
+redis_uri: "redis://127.0.0.1:6379"
