--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ tracing-subscriber = { version = "0.3.19", features = [
 ] }
 unicode-segmentation = "1.12.0"
 urlencoding = "2.1.3"
-uuid = { version = "1.12.0", features = ["v4"] }
+uuid = { version = "1.12.0", features = ["serde", "v4"] }
 validator = "0.20.0"
 
 [dependencies.sea-orm]
