--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ sea-orm-migration = "1.1.10"
 secrecy = { version = "0.10.3", features = ["serde"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde-aux = "4.5.0"
+serde_json = "1.0.138"
 sha2 = "0.10.8"
 thiserror = "2.0.11"
 time = "0.3.41"
