--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.16.0", features = ["v4"] }
 
 [dependencies.sea-orm-migration]
 version = "1.1.4"
